--- a/.github/workflows/angular.yml
+++ b/.github/workflows/angular.yml
@@ -18,7 +18,9 @@ jobs:
     timeout-minutes: 15
 
     steps:
-      - uses: actions/checkout@v5
+      - uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
       - name: Set up node
         uses: actions/setup-node@v6
         with:
