--- a/.github/workflows/angular.yml
+++ b/.github/workflows/angular.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v6
         with:
           fetch-depth: 0
-          token: {{ secrets.DEPLOY }}
+          token: ${{ secrets.DEPLOY }}
           persist-credentials: true
       - name: Set up node
         uses: actions/setup-node@v6
